# dashboard

./: .gitignore  README.md  flake.nix  main.py  pomodoro_widget.py  pyproject.toml  time_widget.py  weather_widget.py
.github/workflows/: publish.yml
dashboard/: __init__.py  app.py  app.tcss  logger.py
dashboard/screen/: __init__.py  dashboard_screen.py  fun_term_screen.py  weather_screen.py
dashboard/utils/: __init__.py  globals.py  sound.py  text.py  weather.py
dashboard/widgets/: __init__.py  obsidian_widget.py  pomodoro_widget.py  time_widget.py  weather_widget.py
src/: app.py  app.tcss  logger.py  pomodoro_widget.py  time_widget.py  weather_widget.py
src/screen/: __init__.py  dashboard_screen.py  fun_term_screen.py  weather_screen.py
src/utils/: __init__.py  weather.py
src/widgets/: __init__.py  obsidian_widget.py  pomodoro_widget.py  time_widget.py  weather_widget.py
