[project]
name = "dashboard"
version = "0.1.0"
description = "CLI dashboard for being cooler"
readme = "README.md"
authors = [
    {name = "Gatien Chenu", email = "gatien+dev@chenu.me"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "textual>=3.3.0",
    "textual-dev>=1.7.0",
]

[project.scripts]
dashboard = "dashboard.app:main"

[project.urls]
"Homepage" = "https://github.com/gatienc/dashboard"
"Repository" = "https://github.com/gatienc/dashboard.git"

[tool.setuptools.package-data]
"dashboard" = ["app.tcss", "assets/*"]

[dependency-groups]
dev = [
    "dashboard",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
